--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,4 +17,5 @@
     <color name="blue">#0f1cd6</color>
     <color name="red">#c7000a</color>
     <color name="grey">#949494</color>
+    <color name="dialog">#ABB2B9</color>
 </resources>
