--- a/app/src/main/res/layout/layout_custom_dialog2.xml
+++ b/app/src/main/res/layout/layout_custom_dialog2.xml
@@ -2,13 +2,14 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="400dp"
+    android:layout_width="300dp"
     android:layout_height="170dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/rounded_conners">
 
     <TextView
         android:id="@+id/dialog2_quantity_text"
-        android:layout_width="213dp"
+        android:layout_width="130dp"
         android:layout_height="44dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="36dp"
@@ -35,7 +36,7 @@
 
     <TextView
         android:id="@+id/dialog2_set_text"
-        android:layout_width="213dp"
+        android:layout_width="130dp"
         android:layout_height="44dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
@@ -49,7 +50,7 @@
 
     <TextView
         android:id="@+id/dialog2_rep_text"
-        android:layout_width="213dp"
+        android:layout_width="130dp"
         android:layout_height="44dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="16dp"
@@ -100,7 +101,7 @@
         <!-- some views -->
         <Button
             android:id="@+id/dialog2_back_btn"
-            android:layout_width="135dp"
+            android:layout_width="75dp"
             android:layout_height="50dp"
             android:text="back"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -109,7 +110,7 @@
 
         <Button
             android:id="@+id/dialog2_ok_btn"
-            android:layout_width="135dp"
+            android:layout_width="75dp"
             android:layout_height="50dp"
             android:text="ok"
             app:layout_constraintBottom_toBottomOf="parent"
