--- a/app/src/main/res/layout/layout_custom_dialog.xml
+++ b/app/src/main/res/layout/layout_custom_dialog.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="300dp"
     android:layout_height="500dp"
-    android:orientation="vertical"
-    android:background="@drawable/rounded_conners">
+    android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/header_section"
