--- a/app/src/main/res/layout/row_food_dialog.xml
+++ b/app/src/main/res/layout/row_food_dialog.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    android:id="@+id/main_constriant1"
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,21 +7,15 @@
     android:orientation="vertical">
 
     <androidx.cardview.widget.CardView
-        android:id="@+id/main_cardview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:backgroundTint="@color/green"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        android:backgroundTint="@color/green">
 
         <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/main_constriant2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:paddingTop="2dp"
-            android:paddingBottom="4dp">
+            android:paddingBottom="4dp"
+            android:paddingTop="2dp">
 
 
             <TextView
@@ -37,13 +29,13 @@
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toEndOf="@+id/food_img_dialog"
-                app:layout_constraintTop_toTopOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" />
 
 
             <ImageView
                 android:id="@+id/food_img_dialog"
-                android:layout_width="67dp"
-                android:layout_height="67dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="4dp"
                 android:scaleType="fitXY"
@@ -55,25 +47,12 @@
                 android:id="@+id/dialog_quantity_txt"
                 android:layout_width="0dp"
                 android:layout_height="41dp"
-                android:layout_marginStart="4dp"
-                android:layout_marginTop="30dp"
-                android:ems="4"
-                android:hint="quantity"
+                android:layout_marginTop="4dp"
+                android:ems="2"
+                android:hint="qua"
                 android:inputType="number"
                 android:textColorHint="#000000"
-                app:layout_constraintStart_toEndOf="@+id/food_img_dialog"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/dialog_quantity2_txt"
-                android:layout_width="0dp"
-                android:layout_height="41dp"
-                android:layout_marginTop="30dp"
-                android:ems="4"
-                android:hint="reps"
-                android:inputType="number"
-                android:textColorHint="#000000"
-                app:layout_constraintStart_toEndOf="@+id/dialog_quantity_txt"
+                app:layout_constraintEnd_toStartOf="@+id/select_food_dialog"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <CheckBox
@@ -88,4 +67,4 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
